--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body{
 	font-family: 'Lato', 'Helvetica Neue', 'Helvetica', 'sans-serif';
 	font-size: 18px;
 	font-weight: 300;
-	background-image: url('../img/background.jpg');
+	background-image: url(../img/background.jpg);
 	background-repeat: no-repeat;
     background-attachment: fixed;
 }
