--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ body{
 	background-image: url(../img/background.jpg);
 	background-repeat: no-repeat;
     background-attachment: fixed;
+    background-size: cover;
 }
 
 a:link { 
